# esim-vault

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  main.rs  update.rs
src/cli/: commands.rs  mod.rs
src/core/: lpa.rs  mod.rs  profile.rs
src/parser/: lpa_parser.rs  mod.rs
src/ui/: app.rs  components.rs  help.rs  mod.rs
src/vault/: crypto.rs  mod.rs
