[package]
name = "esim-vault"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "Offline-first eSIM wallet/manager TUI tool"
license = "Apache-2.0"
repository = "https://github.com/Yeats33/esim-vault"
keywords = ["esim", "tui", "vault", "qrcode"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# TUI
ratatui = "0.27"
crossterm = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
getrandom = "0.2"

# QR Code
qrcode = { version = "0.14", optional = true }
image = { version = "0.25", optional = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
dirs = "5.0"
regex = "1.10"
rpassword = "7.4"

# HTTP client for update checking
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }

[features]
default = ["qr-encode"]
qr-encode = ["dep:qrcode", "dep:image"]
qr-decode = []  # Requires system dependencies: zbar
check-update = ["dep:reqwest"]

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "esimvault"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
